PROJ-101 リファクタリング実施。名称の変更。