@@ -14,7 +14,6 @@ import com.levels.ShiftSync.entity.AttendanceRecord;
 import com.levels.ShiftSync.entity.AttendanceRequest;
 import com.levels.ShiftSync.entity.LoginUser;
 import com.levels.ShiftSync.repository.AttendanceRecordMapper;
-import com.levels.ShiftSync.repository.AttendanceRequestMapper;
 import com.levels.ShiftSync.service.AttendanceRecordService;
 import com.levels.ShiftSync.utility.SecurityUtils;
 
@@ -26,12 +25,10 @@ import lombok.RequiredArgsConstructor;
 public class AttendanceRecordServiceImpl implements AttendanceRecordService {
 
     private final AttendanceRecordMapper attendanceRecordMapper;
-    
-    private final AttendanceRequestMapper attendanceRequestMapper;
 
     /**
-     * 出勤時間をデータベースに挿入するメソッド
-     * 現在の時刻を出勤時間として設定し、データベースに保存します。
+     * 従業員の出勤時間を現在の時刻で記録します。
+     * 現在ログインしている従業員のIDを使用して、新しい出勤レコードをデータベースに保存します。
      */
     @Override
     public void clockInTime() {
@@ -42,28 +39,30 @@ public class AttendanceRecordServiceImpl implements AttendanceRecordService {
     }
     
     /**
-     * 出勤時刻を更新するメソッド
+     * 指定されたレコードの出勤時間を更新し、出退勤時間を再計算します。
      * 
-     * @param recordId 出退勤レコードのID。どのレコードを更新するかを特定するために使用します。
-     * @param employeeId 従業員のID。どの従業員の出勤時刻を更新するかを特定するために使用します。
-     * @param newClockIn 新しい出勤時刻。タイムスタンプ形式（yyyy-MM-dd HH:mm:ss）で指定します。
+     * @param recordId 出退勤レコードのID
+     * @param employeeId 従業員のID
+     * @param newClockIn 新しい出勤時刻
      */
     @Override
     public void updateClockInTime(Integer recordId, Integer employeeId, Timestamp newClockIn) {
-    	Map<String, Object> params = new HashMap<>();
+        Map<String, Object> params = new HashMap<>();
         params.put("recordId", recordId);
         params.put("employeeId", employeeId);
         params.put("newClockIn", newClockIn);
 
+        // 出勤時間を更新
         attendanceRecordMapper.updateClockInTime(params);
-        
+
+        // 勤怠時間を再計算
         Timestamp currClockOut = getCurrentRecord(recordId).getClockOut();
         attendanceRecordMapper.upsertWorkDuration(recordId, currClockOut, newClockIn);
     }
 
     /**
-     * 退勤時間をデータベースに挿入するメソッド
-     * 現在の時刻を退勤時間として設定し、データベースに保存します。
+     * 従業員の退勤時間を現在の時刻で記録します。
+     * 現在ログインしている従業員のIDを使用して、新しい退勤レコードをデータベースに保存します。
      */
     @Override
     public void clockOutTime() {
@@ -74,11 +73,11 @@ public class AttendanceRecordServiceImpl implements AttendanceRecordService {
     }
     
     /**
-     * 退勤時刻を更新するメソッド
+     * 指定されたレコードの退勤時間を更新し、出退勤時間を再計算します。
      * 
-     * @param recordId 出退勤レコードのID。どのレコードを更新するかを特定するために使用します。
-     * @param employeeId 従業員のID。どの従業員の退勤時刻を更新するかを特定するために使用します。
-     * @param newClockOut 新しい退勤時刻。タイムスタンプ形式（yyyy-MM-dd HH:mm:ss）で指定します。
+     * @param recordId 出退勤レコードのID
+     * @param employeeId 従業員のID
+     * @param newClockOut 新しい退勤時刻
      */
     @Override
     public void updateClockOutTime(Integer recordId, Integer employeeId, Timestamp newClockOut) {
@@ -87,97 +86,118 @@ public class AttendanceRecordServiceImpl implements AttendanceRecordService {
         params.put("employeeId", employeeId);
         params.put("newClockOut", newClockOut);
 
+        // 退勤時間を更新
         attendanceRecordMapper.updateClockOutTime(params);
-        
+
+        // 勤怠時間を再計算
         Timestamp currClockIn = getCurrentRecord(recordId).getClockIn();
         attendanceRecordMapper.upsertWorkDuration(recordId, newClockOut, currClockIn);
     }
-    
+
     /**
-     * 当日の勤怠時間を登録・更新するメソッド
-     * 当日の計算した勤怠時間としてデータベースに保存します。
+     * 当日の出退勤レコードに基づいて、当日の勤務時間を登録または更新します。
      */
     @Override
     public void upsertTodayWorkDuration() {
-    	List<AttendanceRecord> todayRecord = getTodayAttendance();
-    	attendanceRecordMapper.upsertWorkDuration(todayRecord.getFirst().getRecordId(), todayRecord.getFirst().getClockOut(), todayRecord.getFirst().getClockIn());
+        List<AttendanceRecord> todayRecord = getTodayRecordForEmployee();
+        AttendanceRecord firstRecord = todayRecord.get(0);  // リストの最初の要素を取得
+        attendanceRecordMapper.upsertWorkDuration(firstRecord.getRecordId(), firstRecord.getClockOut(), firstRecord.getClockIn());
     }
 
     /**
-     * 従業員の出退勤時間を登録・更新するメソッド
+     * 出退勤レコードの勤務時間を新しい出勤・退勤時刻で再計算し、登録または更新します。
      * 
-     * @param recordId 出退勤レコードのID。どのレコードを更新するかを特定するために使用します。
-     * @param newClockOut 新しい退勤時刻。タイムスタンプ形式（yyyy-MM-dd HH:mm:ss）で指定します。
-     * @param newClockIn 新しい出勤時刻。タイムスタンプ形式（yyyy-MM-dd HH:mm:ss）で指定します。
+     * @param recordId 出退勤レコードのID
+     * @param newClockOut 新しい退勤時刻
+     * @param newClockIn 新しい出勤時刻
      */
     @Override
     public void upsertWorkDuration(Integer recordId, Timestamp newClockOut, Timestamp newClockIn) {
-    	attendanceRecordMapper.upsertWorkDuration(recordId, newClockOut, newClockIn);
+        attendanceRecordMapper.upsertWorkDuration(recordId, newClockOut, newClockIn);
     }
     
     /**
-     * 指定した月の勤怠履歴の承認申請を登録・更新するメソッド
+     * 指定した従業員の指定した月の勤怠承認申請を登録します。
      * 
-     * @param employeeId 従業員ID。どの従業に関する勤怠履歴を更新するかを特定するために使用します。
-     * @param yearMonth 承認対象の年月。年月（yyyy-MM）形式で指定します。
+     * @param employeeId 従業員ID
+     * @param yearMonth 承認対象の年月（YYYY-MM形式）
      */
     @Override
     public void insertApproveRequest(Integer employeeId, String yearMonth) {
-    	attendanceRecordMapper.insertApproveRequest(employeeId, yearMonth);
-    }    
-
-    /**
-     * 従業員の当日の出退勤時間を取得するメソッド
-     * @return 当日の出退勤時間のリスト
-     */
-    @Override
-    public List<AttendanceRecord> getTodayAttendance() {
-        Integer employeeId = SecurityUtils.getEmployeeIdFromSecurityContext();
-        return attendanceRecordMapper.getTodayAttendance(employeeId);
+        attendanceRecordMapper.insertApproveRequest(employeeId, yearMonth);
     }
 
-    
     /**
-     * 任意の月の勤怠記録を取得するメソッド
-     * @param month 取得したい月 (1月 = 1, 12月 = 12)
-     * @return 指定された月の出退勤時間のリスト。出勤または退勤記録がない場合は空のリストを返します。
+     * 現在ログインしている従業員の当日の出退勤レコードを取得します。
+     * 
+     * @return 当日の出退勤レコードのリスト
+     */
+    @Override
+    public List<AttendanceRecord> getTodayRecordForEmployee() {
+        Integer employeeId = SecurityUtils.getEmployeeIdFromSecurityContext();
+        return attendanceRecordMapper.getTodayRecordForEmployee(employeeId);
+    }
+
+    /**
+     * 指定した月の出退勤記録を取得します。
+     * 
+     * @param month 取得したい月（1 = 1月、12 = 12月）
+     * @return 指定した月の出退勤記録のリスト。出勤または退勤記録がない場合は空のリストを返します。
      */
     @Transactional(readOnly = true)
-    public List<AttendanceRecord> getYearlyAttendanceForMonth(int month) {
-        // ログイン中のユーザーIDを取得
-        LoginUser loginUser = (LoginUser) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        Integer employeeId = loginUser.getEmployeeId();
+    public List<AttendanceRecord> getRecordForYearByMonth(int month) {
+        // 現在のユーザーIDを取得
+        Integer employeeId = ((LoginUser) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getEmployeeId();
 
-        // 現在の年と選択された月を "YYYY-MM" 形式で取得
+        // 現在の年と指定した月を "YYYY-MM" 形式で取得
         Calendar cal = Calendar.getInstance();
         String yearMonth = String.format("%d-%02d", cal.get(Calendar.YEAR), month);
 
-        // MyBatisで勤怠記録を取得
-        return attendanceRecordMapper.getMonthlyAttendanceForYear(employeeId, yearMonth);
-    }
-    
-    public boolean hasApprovalPending(Integer employeeId, String yearMonth) {
-        return attendanceRecordMapper.hasApprovalPending(employeeId, yearMonth);
-    }
-    
-    // TODO:実装する
-    public boolean isNoRequest(Integer employeeId, String yearMonth) {
-    	return attendanceRecordMapper.isNoRequest(employeeId, yearMonth);
-    }
-    
-    public boolean hasRequestsForMonth(Integer employeeId, String yearMonth) {
-    	List<AttendanceRequest> records = attendanceRecordMapper.getRequestsForMonth(employeeId, yearMonth);
-    	return !records.isEmpty();
+        return attendanceRecordMapper.getRecordForYearByMonth(employeeId, yearMonth);
     }
 
+    /**
+     * 指定した年月の勤怠承認申請がないかを確認します。
+     * 
+     * @param employeeId 従業員ID
+     * @param yearMonth 確認する年月（YYYY-MM形式）
+     * @return 勤怠承認申請がない場合はtrue、それ以外はfalse
+     */
+    public boolean isNoRequest(Integer employeeId, String yearMonth) {
+        return attendanceRecordMapper.isNoRequest(employeeId, yearMonth);
+    }
+
+    /**
+     * 指定した年月に勤怠承認申請が存在するかを確認します。
+     * 
+     * @param employeeId 従業員ID
+     * @param yearMonth 確認する年月（YYYY-MM形式）
+     * @return 勤怠承認申請がある場合はtrue、それ以外はfalse
+     */
+    public boolean hasRequestsForMonth(Integer employeeId, String yearMonth) {
+        List<AttendanceRequest> records = attendanceRecordMapper.getRequestsForMonth(employeeId, yearMonth);
+        return !records.isEmpty();
+    }
+
+    /**
+     * 指定した年月に出退勤記録が存在するかを確認します。
+     * 
+     * @param employeeId 従業員ID
+     * @param yearMonth 確認する年月（YYYY-MM形式）
+     * @return 出退勤記録がある場合はtrue、それ以外はfalse
+     */
     public boolean hasRecordsForMonth(Integer employeeId, String yearMonth) {
-    	List<AttendanceRecord> records = attendanceRecordMapper.getMonthlyAttendanceForYear(employeeId, yearMonth);
-    	return !records.isEmpty();
+        List<AttendanceRecord> records = attendanceRecordMapper.getRecordForYearByMonth(employeeId, yearMonth);
+        return !records.isEmpty();
     }
-    
+
+    /**
+     * 指定されたレコードIDに基づいて、現在の出退勤レコードを取得します。
+     * 
+     * @param recordId 出退勤レコードのID
+     * @return 現在の出退勤レコード
+     */
     private AttendanceRecord getCurrentRecord(Integer recordId) {
-    	AttendanceRecord currRecord = attendanceRecordMapper.getCurrentRecord(recordId);
-    	return currRecord;
+        return attendanceRecordMapper.getCurrentRecord(recordId);
     }
-    
 }
